# Language

./: .gitignore  CMakeLists.txt  README.md  grammar.md  grammar.txt  main.cpp
src/: builtInFunctions  code.txt  grammar.txt  lexemes.txt  operator.txt
src/back/: Bor.cpp  Bor.h  Error.h  Generator.cpp  Generator.h  Lexeme.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  NameChecker.cpp  NameChecker.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticStack.cpp  SemanticStack.h  TID.h  Translator.cpp  Translator.h
